// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Rectifications should render when loading correctly 1`] = `
Object {
  "component": <section
    className="cards"
  >
    <ActionBar
      desc="Here you can manage requests from users who want to execute their right to rectify the data stored about them."
      title="Rectification requests"
    />
    <Tabs
      defaultFocus={false}
      defaultIndex={null}
      forceRenderTabPanel={false}
      onSelect={[MockFunction]}
      selectedIndex={0}
    >
      <TabList
        className="react-tabs__tab-list"
      >
        <Tab
          className="react-tabs__tab"
          disabledClassName="react-tabs__tab--disabled"
          focus={false}
          id={null}
          key="0"
          panelId={null}
          selected={false}
          selectedClassName="react-tabs__tab--selected"
        >
          tab 1
        </Tab>
        <Tab
          className="react-tabs__tab"
          disabledClassName="react-tabs__tab--disabled"
          focus={false}
          id={null}
          key="1"
          panelId={null}
          selected={false}
          selectedClassName="react-tabs__tab--selected"
        >
          tab 2
        </Tab>
      </TabList>
      <TabPanel
        className="react-tabs__tab-panel"
        forceRender={false}
        selectedClassName="react-tabs__tab-panel--selected"
      >
        <div
          className="row"
        >
          <Card
            cols={8}
          >
            <div
              className="content"
            >
              <Loader />
            </div>
          </Card>
        </div>
      </TabPanel>
      <TabPanel
        className="react-tabs__tab-panel"
        forceRender={false}
        selectedClassName="react-tabs__tab-panel--selected"
      >
        <div
          className="row"
        >
          <Card
            cols={8}
          >
            <div
              className="content"
            >
              <Loader />
            </div>
          </Card>
        </div>
      </TabPanel>
    </Tabs>
  </section>,
  "props": Object {
    "currentPage": 1,
    "data": Array [
      Object {
        "created_at": "02/07/2018 9:31pm",
        "id": 4,
        "request_reason": "The data was incorrect.",
        "status": "APPROVED",
      },
      Object {
        "created_at": "02/07/2018 9:35pm",
        "id": 5,
        "request_reason": "The data was incorrect two.",
        "status": "DISAPPROVED",
      },
      Object {
        "created_at": "02/07/2018 9:31pm",
        "id": 6,
        "request_reason": "The data was incorrect two three.",
        "status": "APPROVED",
      },
    ],
    "isLoading": true,
    "onDetailsClick": [MockFunction],
    "onPageSelected": [MockFunction],
    "onTabSelect": [MockFunction],
    "pageCount": 2,
    "selectedTab": 0,
    "tabs": Array [
      "tab 1",
      "tab 2",
    ],
  },
}
`;

exports[`(Component) Rectifications should render when not loading correctly 1`] = `
<section
  className="cards"
>
  <ActionBar
    desc="Here you can manage requests from users who want to execute their right to rectify the data stored about them."
    title="Rectification requests"
  />
  <Tabs
    defaultFocus={false}
    defaultIndex={null}
    forceRenderTabPanel={false}
    onSelect={[MockFunction]}
    selectedIndex={0}
  >
    <TabList
      className="react-tabs__tab-list"
    >
      <Tab
        className="react-tabs__tab"
        disabledClassName="react-tabs__tab--disabled"
        focus={false}
        id={null}
        key="0"
        panelId={null}
        selected={false}
        selectedClassName="react-tabs__tab--selected"
      >
        tab 1
      </Tab>
      <Tab
        className="react-tabs__tab"
        disabledClassName="react-tabs__tab--disabled"
        focus={false}
        id={null}
        key="1"
        panelId={null}
        selected={false}
        selectedClassName="react-tabs__tab--selected"
      >
        tab 2
      </Tab>
    </TabList>
    <TabPanel
      className="react-tabs__tab-panel"
      forceRender={false}
      selectedClassName="react-tabs__tab-panel--selected"
    >
      <div
        className="row"
      >
        <Card
          cols={8}
        >
          <React.Fragment>
            <div
              className="content"
            >
              <Table
                actions={
                  Array [
                    Object {
                      "label": "Details",
                      "onClick": [Function],
                    },
                  ]
                }
                columns={
                  Object {
                    "created_at": Object {
                      "title": "Created at",
                    },
                    "id": Object {
                      "title": "ID",
                    },
                    "request_reason": Object {
                      "title": "Reason",
                    },
                    "status": Object {
                      "filter": [Function],
                      "title": "Status",
                    },
                  }
                }
                rows={
                  Array [
                    Object {
                      "created_at": "02/07/2018 9:31pm",
                      "id": 4,
                      "request_reason": "The data was incorrect.",
                      "status": "APPROVED",
                    },
                    Object {
                      "created_at": "02/07/2018 9:35pm",
                      "id": 5,
                      "request_reason": "The data was incorrect two.",
                      "status": "DISAPPROVED",
                    },
                    Object {
                      "created_at": "02/07/2018 9:31pm",
                      "id": 6,
                      "request_reason": "The data was incorrect two three.",
                      "status": "APPROVED",
                    },
                  ]
                }
              />
            </div>
            <div
              className="content"
            >
              <Paginate
                disableInitialCallback={true}
                initialPage={0}
                onPageChange={[Function]}
                pageCount={2}
              />
            </div>
          </React.Fragment>
        </Card>
      </div>
    </TabPanel>
    <TabPanel
      className="react-tabs__tab-panel"
      forceRender={false}
      selectedClassName="react-tabs__tab-panel--selected"
    >
      <div
        className="row"
      >
        <Card
          cols={8}
        >
          <React.Fragment>
            <div
              className="content"
            >
              <Table
                actions={
                  Array [
                    Object {
                      "label": "Details",
                      "onClick": [Function],
                    },
                  ]
                }
                columns={
                  Object {
                    "created_at": Object {
                      "title": "Created at",
                    },
                    "id": Object {
                      "title": "ID",
                    },
                    "request_reason": Object {
                      "title": "Reason",
                    },
                    "status": Object {
                      "filter": [Function],
                      "title": "Status",
                    },
                  }
                }
                rows={
                  Array [
                    Object {
                      "created_at": "02/07/2018 9:31pm",
                      "id": 4,
                      "request_reason": "The data was incorrect.",
                      "status": "APPROVED",
                    },
                    Object {
                      "created_at": "02/07/2018 9:35pm",
                      "id": 5,
                      "request_reason": "The data was incorrect two.",
                      "status": "DISAPPROVED",
                    },
                    Object {
                      "created_at": "02/07/2018 9:31pm",
                      "id": 6,
                      "request_reason": "The data was incorrect two three.",
                      "status": "APPROVED",
                    },
                  ]
                }
              />
            </div>
            <div
              className="content"
            >
              <Paginate
                disableInitialCallback={true}
                initialPage={0}
                onPageChange={[Function]}
                pageCount={2}
              />
            </div>
          </React.Fragment>
        </Card>
      </div>
    </TabPanel>
  </Tabs>
</section>
`;
